@@ -1,4 +1,4 @@
-# $Id: Makefile.vc,v 1.14 2008-01-01 15:53:10 fwarmerdam Exp $
+# $Id: Makefile.vc,v 1.15 2009-01-22 20:53:07 fwarmerdam Exp $
 #
 # Copyright (C) 2004, Andrey Kiselev <dron@ak4719.spb.edu>
 #
@@ -35,7 +35,7 @@ TARGETS	=	bmp2tiff.exe tiffinfo.exe tiffdump.exe fax2tiff.exe \
 		tiffcmp.exe tiffcp.exe tiffcrop.exe tiffdither.exe \
 		tiffmedian.exe tiffset.exe tiffsplit.exe 
 
-INCL		= 	-I..\libtiff
+INCL		= 	-I..\libtiff -I..\port -DNEED_LIBPORT
 LIBS		=	$(LIBS) ..\port\libport.lib ..\libtiff\libtiff.lib
 
 default:	$(TARGETS)
